--- a/PandoraLauncher.desktop
+++ b/PandoraLauncher.desktop
@@ -3,7 +3,7 @@ Name=Pandora
 GenericName=Minecraft launcher
 Comment=Pandora Minecraft launcher
 Keywords=minecraft;game;gaming;
-Exec=PandoraLauncher %f
+Exec=PandoraLauncher
 Icon=PandoraLauncher
 Terminal=false
 Type=Application
